# training-plan-generator

./: .gitignore  README.md  config.py  db.py  llm.py  profile.py  pyproject.toml  questionnaire.py  run_insert.py  run_questionnaire.py  schema.sql  test_llm.py  test_profile.py  test_yearly_plan.py  yearly_plan.py  yearly_plan_generator.py
scripts/: run_insert.py  run_questionnaire.py  seed_exercises.sql  smoke_generate_structured.py  smoke_judge.py
tests/: test_eligibility.py  test_generate_structured.py  test_generators.py  test_judge.py  test_llm.py  test_profile.py  test_schedule.py  test_schemas.py  test_yearly_plan.py
tpg/: config.py  db.py  llm.py  main.py  questionnaire.py  tracing.py
tpg/eval/: judge.py
tpg/planning/: monthly.py  weekly.py  yearly.py
tpg/schemas/: exercise.py  judgement.py  monthly_plan.py  profile.py  session_plan.py  weekly_plan.py  yearly_plan.py
tpg/session/: eligibility.py  schedule.py  session.py
viz/: check.html
web/: index.html  plan.html  week.html
web/js/: api.js
