[project]
name = "tpg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.138.2",
    "ollama>=0.6.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tpg"]
